datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_window_functions__udwf_bounded_window_returns_null.snap
---
source: datafusion/core/tests/user_defined/user_defined_window_functions.rs
expression: fmt_batches(&actual)
---
+---+---+-----+--------------------------------------------------------------------------------------------------------------+
| x | y | val | odd_counter(t.val) PARTITION BY [t.x] ORDER BY [t.y ASC NULLS LAST] ROWS BETWEEN 1 PRECEDING AND 1 FOLLOWING |
+---+---+-----+--------------------------------------------------------------------------------------------------------------+
| 1 | a | 0   | 1                                                                                                            |
| 1 | b | 1   | 1                                                                                                            |
| 1 | c | 2   | 1                                                                                                            |
| 2 | d | 3   | 1                                                                                                            |
| 2 | e | 4   | 2                                                                                                            |
| 2 | f | 5   | 1                                                                                                            |
| 2 | g | 6   | 1                                                                                                            |
| 2 | h | 6   |                                                                                                              |
| 2 | i | 6   |                                                                                                              |
| 2 | j | 6   |                                                                                                              |
+---+---+-----+--------------------------------------------------------------------------------------------------------------+
