datafusion/core/tests/user_defined/snapshots/user_defined_integration__user_defined__user_defined_window_functions__udwf_query_include_rank.snap
---
source: datafusion/core/tests/user_defined/user_defined_window_functions.rs
expression: fmt_batches(&actual)
---
+---+---+-----+-----------------------------------------------------------------------------------------------------------------------+
| x | y | val | odd_counter(t.val) PARTITION BY [t.x] ORDER BY [t.y ASC NULLS LAST] RANGE BETWEEN UNBOUNDED PRECEDING AND CURRENT ROW |
+---+---+-----+-----------------------------------------------------------------------------------------------------------------------+
| 1 | a | 0   | 3                                                                                                                     |
| 1 | b | 1   | 2                                                                                                                     |
| 1 | c | 2   | 1                                                                                                                     |
| 2 | d | 3   | 7                                                                                                                     |
| 2 | e | 4   | 6                                                                                                                     |
| 2 | f | 5   | 5                                                                                                                     |
| 2 | g | 6   | 4                                                                                                                     |
| 2 | h | 6   | 3                                                                                                                     |
| 2 | i | 6   | 2                                                                                                                     |
| 2 | j | 6   | 1                                                                                                                     |
+---+---+-----+-----------------------------------------------------------------------------------------------------------------------+
